# SalaryValidator

./: .env.example  .gitignore  =4.0  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
plan/: implementation-plan.md
project progress/: phase-1-complete.md  phase-2-complete.md  phase-3-complete.md  phase-4-complete.md  phase-5-complete.md  phase-6-complete.md  phase-7-complete.md  phase-8-complete.md
src/: __init__.py  agent.py  api.py  config.py  logging_config.py  main.py  models.py
src/calculator/: __init__.py  aggregator.py  calculations.py  missing_amount_calculator.py  statistics.py
src/ocr/: __init__.py  base.py  factory.py  file_handler.py  google_vision_provider.py  tesseract_provider.py  textract_provider.py
src/parser/: __init__.py  date_parser.py  field_extractor.py  hebrew_utils.py  llm_extractor.py  number_extractor.py  payslip_parser.py
src/reporter/: __init__.py  formatters.py  html_reporter.py  json_reporter.py  pdf_reporter.py  report_generator.py  templates.py  text_reporter.py
src/static/: index.html
src/validator/: __init__.py  base.py  labor_law_data.py  payslip_validator.py  rate_fetcher.py
src/validator/rules/: __init__.py  hours_rate_rule.py  minimum_wage_rule.py  pension_rule.py  social_insurance_rules.py
tests/: __init__.py  conftest.py  test_calculator.py  test_edge_cases.py  test_integration.py  test_ocr.py  test_parser.py  test_reporter.py  test_validator.py
tests/data/: sample_ocr_text_alternative.txt  sample_ocr_text_standard.txt
tests/data/sample_payslips/: compliant_payslip.json  minimum_wage_violation.json  multiple_violations.json  pension_violation.json
